--- a/Projeto-Netflix/Tela_Inicial/index.html
+++ b/Projeto-Netflix/Tela_Inicial/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/main.css">
-    <link rel="shortcut icon" href="/home/gabriel.duarte/Documentos/Scripts/Projeto-Netflix/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/usr/local/apache2/htdocs/estag-flix/favicon.ico" type="image/x-icon" />
 
     <!--responsividade-->
     <link rel="stylesheet" href="style/responsive.css">
