--- a/Projeto-Netflix/index.html
+++ b/Projeto-Netflix/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>EstagFlix</title>
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="shortcut icon" href="/home/gabriel.duarte/Documentos/Scripts/Projeto-Netflix/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/usr/local/apache2/htdocs/estag-flix/favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <div class="contenedor-form">
