--- a/paginas/pagina-filmes/index.html
+++ b/paginas/pagina-filmes/index.html
@@ -134,10 +134,10 @@
     
     
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
-    <script src="js/owl/jquery.min.js"></script>
-    <script src="js/owl/owl.carousel.min.js"></script>
-    <script src="js/owl/setup.js"></script>
-    <script src="js/owl/scripts.js"></script>
+    <script src="/home/gabriel.duarte/Documentos/Scripts/EstagFlix/paginas/pagina-filmes/js/jquery.min.js"></script>
+    <script src="/home/gabriel.duarte/Documentos/Scripts/EstagFlix/paginas/pagina-filmes/js/owl.carousel.min.js"></script>
+    <script src="/home/gabriel.duarte/Documentos/Scripts/EstagFlix/paginas/pagina-filmes/js/scripts.js"></script>
+    <script src="/home/gabriel.duarte/Documentos/Scripts/EstagFlix/paginas/pagina-filmes/js/setup.js"></script>
 
 
 
