--- a/paginas/pagina-login/index.html
+++ b/paginas/pagina-login/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>EstagFlix</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="style/estilos.css">
     <link rel="shortcut icon" href="/usr/local/apache2/htdocs/estag-flix/pagina-login/favicon.ico" type="image/x-icon" />
 </head>
 <body>
