--- a/paginas/pagina-filmes/index.html
+++ b/paginas/pagina-filmes/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/main.css">
-    <link rel="shortcut icon" href="/usr/local/apache2/htdocs/estag-flix/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/usr/local/apache2/htdocs/estag-flix/paginas/pagina-login/favicon.ico" type="image/x-icon" />
 
     <!--responsividade-->
     <link rel="stylesheet" href="style/responsive.css">
@@ -134,13 +134,10 @@
     
     
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
-    <script src="/home/gabriel.duarte/Documentos/Scripts/EstagFlix/paginas/pagina-filmes/js/jquery.min.js"></script>
-    <script src="/home/gabriel.duarte/Documentos/Scripts/EstagFlix/paginas/pagina-filmes/js/owl.carousel.min.js"></script>
-    <script src="/home/gabriel.duarte/Documentos/Scripts/EstagFlix/paginas/pagina-filmes/js/scripts.js"></script>
-    <script src="/home/gabriel.duarte/Documentos/Scripts/EstagFlix/paginas/pagina-filmes/js/setup.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/setup.js"></script>
 
-
-
- 
 </body>
 </html>
