Adição do favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR"> <!-- declarando idioma no HTML -->
 <head>
     <meta charset="UTF-8"> <!-- habilitando acentos e ortografia em pt-br-->
-
+    <link rel="shortcut icon" href="estagflix/paginas/pagina-login/favicon.ico" type="image/x-icon" />
     <title> Paginal Inicial - Site da Empresa</title>
     <link href="estilo.css" rel="stylesheet"> <!-- importanto a folha estilo css -->
 </head>
