--- a/paginas/pagina-login/index.html
+++ b/paginas/pagina-login/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>EstagFlix</title>
+    <title>Login – EstagFlix</title>
     <link rel="stylesheet" href="style/estilos.css">
-    <link rel="shortcut icon" href="paginas/pagina-login/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <div class="contenedor-form">
