--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE HTML>
-<html lang="pt-BR"> <!-- declarando idioma no HTML -->
+<html lang="pt-BR"> 
 <head>
-    <meta charset="UTF-8"> <!-- habilitando acentos e ortografia em pt-br-->
+    <meta charset="UTF-8"> 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>EstagFlix</title>
-    <link href="estilo.css" rel="stylesheet"> <!-- importanto a folha estilo css -->
+    <link href="estilo.css" rel="stylesheet"> 
 </head>
 <body>
-<header id="cabecalho">
-
-    	<a href="index.html" id="logo">
-        <nav id="menu-principal">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Empresa</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="paginas/pagina-login/index.html">Login</a></li>
-            </ul>
+<header><br>
+    <div class="container">
+            <h2 class="logo">EstagFlix</h2>
+        <nav>
+            <a href="paginas/pagina-login/index.html">Login</a></li>
         </nav>
-</header>
+    </div><br>
+    <div class="capa" ></div>
 
+
+    
+</header><br>
 
 
            
